--- a/astrarre-transfer-v0/src/main/resources/assets/astrarre/lang/en_us.json
+++ b/astrarre-transfer-v0/src/main/resources/assets/astrarre/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "tooltip.astrarre-transfer-v0.uses_tooltip": "Uses Astrarre Transfer API"
+  "tooltip.astrarre-transfer-v0.uses_tooltip": "Uses Astrarre Transfer API",
+  "tooltip.astrarre-transfer-v0.compatible_tooltip": "Compatible With Astrarre Transfer API"
 }
